--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="style" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
     crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Forecast</title>
 </head>
 <body>
-    
+    <div class="jumbotron weather">
+        <h1>Weather Forecast</h1>   
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <div class="row">
+                    <h3 class="col-12">
+                        Search for a city:
+                    </h3>
+                    <input id="city" class="col-12" placeholder="San Diego">
+                    <button class="col-12" id="search">Search</button>
+                </div>
+                <div class="row">
+                    <div class="col-12 divider"></div>
+                </div>
+                <div class="row" id="previous">
+                    <!-- <button class="col-12 oldSearch">hi</button> -->
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="container">
+                    <div class="row" id="now">
+                    </div>
+                    <div class="row" id="forecast">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
     crossorigin="anonymous"></script>
@@ -20,5 +53,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
     crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
