--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
                     <h3 class="col-12">
                         Search for a city:
                     </h3>
-                    <input id="city" class="col-12" placeholder="San Diego">
-                    <button class="col-12" id="search">Search</button>
+                    <form clas="col-12">
+                        <input id="city" class="col-12" placeholder="San Diego">
+                        <button class="col-12" id="search">Search</button>
+                    </form>
                 </div>
                 <div class="row">
                     <div class="col-12 divider"></div>
